--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
+body{
+    font-family: 'Poppins', sans-serif;
+}
 /* navbar styles  */
 .navbar-brand{
     color: tomato;
@@ -47,6 +51,11 @@
     color: white;
     background-color: tomato;
 }
+footer h2{
+    color: tomato;
+}
+
+/* media for screen */
 @media only screen and (max-width:575px) {
     .courses-img img{
         width: 100%;
